--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -56,13 +56,13 @@ a {
   width: 18px;
   height: 18px;
   flex-shrink: 0;
-  fill: #fbfbfb;
+  fill: #cbcbcb;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon:hover,
 .footer-social-icon:focus {
-  fill: rgba(251, 251, 251, 0.5);
+  fill: #fbfbfb;
 }
 
 .footer-tel {
