--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -92,7 +92,14 @@
     line-height: 1.25;
 }
 }
-/* .swiper {
-        width: 100%;
-} */
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+    z-index: -1;
+    display: block;
+}
 
