--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,11 +5,11 @@
   background-color: transparent;
   border-bottom: 1px solid;
   border-color: #0c0c0c1a;
+  z-index: 100;
 }
 
 .header.scrolled {
   background-color: rgba(0, 0, 0, 0.35);
-  border-color: none;
 }
 
 .header .container {
