--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -14,7 +14,6 @@
     margin-bottom: 0;
 }
 .catalog-item-img:hover { 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 
     0 4px 4px 0 rgba(0, 0, 0, 0.25), 
     0 4px 4px 0 rgba(0, 0, 0, 0.25), 
@@ -25,7 +24,8 @@
     border-radius: 30px;
     max-width: 100%;
     height: 362px;
-    background: #f3f3f3;    
+    background: #f3f3f3;   
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .catalog-photo {    
     margin: 24px auto 10px auto; 
@@ -68,7 +68,8 @@
     text-align: center;
     color: #fbfbfb;
     display: block;
-    margin: 40px auto 0 auto;            
+    margin: 40px auto 0 auto;  
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);           
 }
 .catalog-btn:hover {
     background: #1f3cd4;
