--- a/src/css/advert.css
+++ b/src/css/advert.css
@@ -15,9 +15,8 @@ overflow: hidden;
 
 .advertisement-container{border-radius: 30px;
 max-width: 335px;
-height: 363px;
 background-image: url("/img/advert/advert-mobile.png");  background-size: cover;
-background-color: #0c0c0c;;
+background-color: #0c0c0c;
 margin-left: auto;
 padding: 60px 28px;
 margin-right: auto;
