--- a/src/css/advert.css
+++ b/src/css/advert.css
@@ -12,17 +12,21 @@ clip: rect(0 0 0 0);
 overflow: hidden;
 }
 
-
 .advertisement-container{border-radius: 30px;
 max-width: 335px;
 background-image: url("/img/advert/advert-mobile.png");  background-size: cover;
 background-color: #0c0c0c;
 margin-left: auto;
 padding: 60px 28px;
-margin-right: auto;
 background-repeat: no-repeat;
 background-position: center; 
 }
+.advert-div{
+display: flex;
+flex-direction: column;
+column-gap: 28px;
+}
+
 .advert-text{
 max-width: 279px;
 margin-bottom: 28px;
@@ -49,12 +53,20 @@ line-height: 1.29;
 color: #fbfbfb;
 margin-right: auto;
 text-align: center;
-border-radius: 30px;
-width: 160px;
+border-radius: 16px;
+max-width: 74px;
 height: 48px;
 background-color: rgba(28,28,28,0);
-border: 1px solid #FBFBFB;
-;}
+border: 1px solid rgba(251, 251, 251, 0.15);;
+overflow: hidden;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding-left: 43px;
+padding-right: 43px;}
+
+.advert-link:hover,
+.advert-link:focus{
+color: #0c0c0c;
+background: #fbfbfb;}
 
 @media only screen and (min-resolution: 192dpi) and (max-width: 767px){ 
     .advertisement {
@@ -63,8 +75,8 @@ border: 1px solid #FBFBFB;
 
 /* == Tablet Advertisement Section styles == */
 @media only screen and (min-width: 768px){
-    .advertisement-container {max-width: 704px; 
-        height: 425px; padding: 80px 64px;
+    .advertisement-container {max-width: 768px; 
+        max-height: 425px; padding: 80px 64px;
         background-image: url("/img/advert/advert-tablet.png");
     }
     .advert-text{max-width: 576px; 
@@ -72,6 +84,9 @@ border: 1px solid #FBFBFB;
         line-height: 0.92;
         margin-bottom: 32px;
     }
+    .advert-div{
+        column-gap: 32px;
+        }
 }
 @media only screen and (min-resolution: 192dpi) and (min-width: 768px){
     .advertisement-container { 
@@ -89,14 +104,8 @@ border: 1px solid #FBFBFB;
     }
     .advert-text{max-width: 690px;
         font-size: 48px;
-
     }
-    .advert-link:hover,
-    .advert-link:focus{
-    color: #0c0c0c;
-    background: #fbfbfb;
-}
-}
+ }
     @media only screen and (min-resolution: 192dpi) and (min-width:1158px){
         .advertisement-container {padding: 120px 0;
         background-image: url("/img/advert/advert-desktop@2x.png")}
