--- a/src/css/header.css
+++ b/src/css/header.css
@@ -6,6 +6,8 @@
   border-bottom: 1px solid;
   border-color: #0c0c0c1a;
   z-index: 100;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header.scrolled {
@@ -15,12 +17,10 @@
 .header .container {
   display: flex;
   justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 20px;
   align-items: center;
 }
 @media (min-width: 768px) {
-  .header .container {
+  .header {
     padding-top: 26px;
     padding-bottom: 26px;
   }
