--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,11 +1,16 @@
+.hero-section {
+  padding-top: 134px;
+}
+
 .hero-container {
   padding: 0px 20px;
-  padding-top: 134px;
 }
 
 @media screen and (min-width: 768px) {
   .hero-container {
     padding: 0px 32px;
+  }
+  .hero-section {
     padding-top: 172px;
   }
 }
@@ -13,6 +18,8 @@
 @media screen and (min-width: 1280px) {
   .hero-container {
     padding: 0px 65px;
+  }
+  .hero-section {
     padding-top: 168px;
   }
 }
